Spacing issues

--- a/src/components/RenderRouter/ContentItem.scss
+++ b/src/components/RenderRouter/ContentItem.scss
@@ -715,7 +715,6 @@
     left: 0vw;
     width: 80vw;
     border: none;
-    margin-bottom: 10vw;
   }
 
   .madarrow {
